[tool.poetry]
name = "test-task"
version = "0.1.0"
description = ""
authors = ["Bohdan <codeberry20@gmail.com >"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
selenium = "^4.19.0"
webdriver-manager = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
